--- a/calculatorKata/composer.json
+++ b/calculatorKata/composer.json
@@ -6,7 +6,10 @@
         "php": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3.10"
+        "phpunit/phpunit": "^9.3.10",
+        "phpro/grumphp": "*",
+        "phpmd/phpmd": "^2.13",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
@@ -21,7 +24,10 @@
         }
     },
     "config": {
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "phpro/grumphp": true
+        }
     },
     "scripts": {
         "test": [
