--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,7 +20,8 @@ jobs:
           ls ${{ github.workspace }}
 
       - name: Install dependencies
-        run: ../calculatorKata/composer install
+        working-directory: ./calculatorKata
+        run: composer install
 
       - name: Run PHPUnit tests
         run: ./calculatorKata/vendor/bin/phpunit --testdox --log-junit=test-results.xml
