--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./calculatorKata
+        run: composer update
         run: composer install
 
       - name: Run PHPUnit tests
