--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,8 +21,9 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./calculatorKata
-        run: composer update
-        run: composer install
+        run: |
+          composer update
+          composer install
 
       - name: Run PHPUnit tests
         run: ./calculatorKata/vendor/bin/phpunit --testdox --log-junit=test-results.xml
