--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,4 +27,4 @@ jobs:
 
       - name: Run PHPUnit tests
         working-directory: ./calculatorKata
-        run: /vendor/bin/phpunit --testdox --log-junit=test-results.xml
+        run: vendor/bin/phpunit --testdox --log-junit=test-results.xml
